# biosim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
libbiosim/: CMakeLists.txt
libbiosim/che/: alignment.cpp  alignment.h  assembly.cpp  assembly.h  assembly_atom.cpp  assembly_atom.h  assembly_cc.cpp  assembly_cc.h  atom.cpp  atom.h  atom_contact.cpp  atom_contact.h  bond.cpp  bond.h  cc.cpp  cc.h  cc_labeled.cpp  cc_labeled.h  cchb.cpp  cchb.h  cchb_dssp.cpp  cchb_dssp.h  complex.cpp  complex.h  molecule.cpp  molecule.h  ps.h  qs.cpp  qs.h  sequence.h  sequence_interval.h  ss.cpp  ss.h  structure.cpp  structure.h  structure_ensemble.cpp  structure_ensemble.h  ts.cpp  ts.h
libbiosim/che/algo/: aligner.h  aligner_dp.cpp  aligner_dp.h
libbiosim/che/io/: file_assembly.cpp  file_assembly.h  file_fasta.cpp  file_fasta.h  file_pdb.cpp  file_pdb.h  file_pdb_data.cpp  file_pdb_data.h  file_psipredv.cpp  file_psipredv.h  file_pssm.cpp  file_pssm.h  file_qs.cpp  file_qs.h  file_sse_pool.cpp  file_sse_pool.h
libbiosim/che/score/: cm.cpp  cm.h  cm_assembly_ssq3.cpp  cm_assembly_ssq3.h  cm_cc_blosum.cpp  cm_cc_blosum.h  cm_cc_function.h  cm_cc_identity.cpp  cm_cc_identity.h  ev_alignment.cpp  ev_alignment.h
libbiosim/math/: dp.h  floating_point.h  function.h  interval.h  interval_scheduler.h  interval_scheduler_maximize.h  point.cpp  point.h  point_typed.cpp  point_typed.h  tensor.h
libbiosim/math/algo/: average.cpp  average.h  distance.h  dp.h  factorial.cpp  factorial.h  interval_scheduler.h  interval_scheduler_maximize.h
libbiosim/score/: cm.cpp  cm.h  cm_assembly_ssq3.cpp  cm_assembly_ssq3.h  cm_cc_blosum.cpp  cm_cc_blosum.h  function.h
libbiosim/tools/: compare.h  enumerate.h  exceptions.h  file.cpp  file.h  format.h  incrementor.cpp  incrementor.h  less.h  log.cpp  log.h  mapper.h  string.cpp  string.h  type_with_size.h
src/: CMakeLists.txt  align.cpp  ssstat.cpp
test/: CMakeLists.txt  unit_tester.cpp
test/che/: assembly.cpp  assembly_atom.cpp  assembly_cc.cpp  atom.cpp  bond.cpp  cc.cpp  cchb.cpp  cchb_dssp.cpp  complex.cpp  molecule.cpp  qs.cpp  sequence_interval.cpp  ss.cpp  structure.cpp  structure_ensemble.cpp  ts.cpp
test/che/algo/: aligner_dp.cpp
test/che/io/: file_assembly.cpp  file_fasta.cpp  file_pdb.cpp  file_psipredv.cpp  file_pssm.cpp  file_qs.cpp  file_sse_pool.cpp
test/che/score/: cm.cpp  cm_cc_blosum.cpp  cm_cc_identity.cpp  ev_alignment.cpp
test/data/: 1UBI_A_DSSP.fasta  1UBI_A_DSSP2.fasta  1UBI_A_DSSP3.fasta  1a00_a.fasta  1a00_a_no_id.fasta  1a00_b.fasta  3IM3-biomolecule-bcl.pool  P01236-multifasta.fasta  P01236-multifasta2.fasta  P01236-short-old-blast.pssm  P01236-short-old-blast.pssm_ascii  P01236-short.fasta  P01236-short.pssm  P01236-short.pssm_ascii  P01236-shorter.fasta  P01942-shorter.fasta  P01942.fasta  P02088-shorter.fasta  P02088.fasta  T0666.jufo9d_ss  T0666.psipred_ss  T0666.psipred_ss2  T0666.rdbProf  T0666A.SSPredHighest_PSIPRED_JUFO_OCTOPUS.pool  T0666A.SSPredHighest_PSIPRED_JUFO_OCTOPUS_short.pool
test/math/: dp.cpp  floating_point.cpp  interval.cpp  interval_scheduler_maximize.cpp  point.cpp  point_typed.cpp  tensor.cpp
test/math/algo/: average.cpp  dp.cpp  factorial.cpp  interval_scheduler_maximize.cpp  point_distance.cpp
test/score/: cm.cpp  cm_cc_blosum.cpp
test/tools/: enumerate.cpp  file.cpp  incrementor.cpp  mapper.cpp  string.cpp
